Made some CSS adjustments

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="main">
         <h1>Michal's Test Page</h1>
         <h3>Welcome to my personal testing website</h3>
         <textarea id="typing-deleting-text" readonly></textarea>
