--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <script src="typing-deleting-text.js"></script>
 
     </div>
+    <div>
+        <button onclick="window.location.href = 'calc.html';">Click me</button>
+    </div>
 	
 </body>
 
