--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
 </head>
 
 <body>
+    <div class="main-nav">
+        <nav>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="calc.html">PROJECTS</a></li>
+                <li><a href="#">BLOG</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <div class="main">
         <h1>Michal's Test Page</h1>
         <h3>Welcome to my personal testing website</h3>
         <textarea id="typing-deleting-text" readonly></textarea>
         <script src="typing-deleting-text.js"></script>
 
-    </div>
-    <div>
-        <button onclick="window.location.href = 'calc.html';">Click me</button>
     </div>
 	
 </body>
