--- a/calc.html
+++ b/calc.html
@@ -8,6 +8,15 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div id="main-nav">
+            <nav>
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="calc.html">PROJECTS</a></li>
+                    <li><a href="#">BLOG</a></li>
+                </ul>
+            </nav>
+        </div>
         <h1>Simple calculator</h1>
         <input type="number" id="num1-el" />
         <input type="number" id="num2-el" />
@@ -19,6 +28,5 @@
         <br>
         <span id="sum-el"></span>
         <script src="functions.js"></script>
-        <a href="index.html">Home</a>
     </body>
 </html>
