Working on Blackjack and optimising code

--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 
 <body>
-    <div class="main-nav">
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="calc.html">PROJECTS</a></li>
-                <li><a href="#">BLOG</a></li>
-            </ul>
-        </nav>
-    </div>
+    <nav id="main-nav">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="calc.html">PROJECTS</a></li>
+            <li><a href="#">BLOG</a></li>
+        </ul>
+    </nav>
 
     <div class="main">
         <h1>Michal's Test Page</h1>
