--- a/calc.html
+++ b/calc.html
@@ -8,17 +8,15 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div id="main-nav">
-            <nav>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="calc.html">PROJECTS</a></li>
-                    <li><a href="#">BLOG</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav id="main-nav">
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="calc.html">PROJECTS</a></li>
+                <li><a href="#">BLOG</a></li>
+            </ul>
+        </nav>
         <div class="simple-calc">
-            <h1>Simple calculator</h1>
+            <h1 class="simple-calc-title">Simple calculator</h1>
             <input type="number" id="num1-el" />
             <input type="number" id="num2-el" />
             <br>
@@ -31,14 +29,17 @@
             <script src="functions.js"></script>
         </div>
         <br>
-        <div class="Blackjack">
-            <h1>Blackjack</h1>
+        <div class="blackjack">
+            <h1 class="blackjack-title">Blackjack</h1>
             <p id="message-el">Want to play a round?</p>
-            <p id="cards-el">Cards:</p>
-            <p id="cards-sum-el">Sum:</p>
-            <button onclick="deal()">Deal</button>
-            <button onclick="hit()">Hit</button>
-            <button onclick="stay()">Stay</button>
+            <p id="cards-el"></p>
+            <p id="cards-sum-el"></p>
+            <div class="bj-buttons">
+                <button id="deal-btn" onclick="deal()">Deal</button>
+                <button id="hit-btn" disabled onclick="hit()">Hit</button>
+                <button id="stay-btn" disabled onclick="stay()">Stay</button>
+                <button id="reset-btn" onclick="reset()">Reset</button>
+            </div>
 
         </div>
     </body>
