Fixed html to only call js file once and fixed other bugs and made tweaks

--- a/calc.html
+++ b/calc.html
@@ -26,21 +26,20 @@
             <button onclick="multiply()">Multiply</button>
             <br>
             <span id="sum-el"></span>
-            <script src="functions.js"></script>
         </div>
         <br>
         <div class="blackjack">
             <h1 class="blackjack-title">Blackjack</h1>
             <p id="message-el">Want to play a round?</p>
-            <p id="cards-el"></p>
-            <p id="cards-sum-el"></p>
+            <p id="cards-el">Cards:</p>
+            <p id="cards-sum-el">Sum:</p>
             <div class="bj-buttons">
                 <button id="deal-btn" onclick="deal()">Deal</button>
                 <button id="hit-btn" disabled onclick="hit()">Hit</button>
                 <button id="stay-btn" disabled onclick="stay()">Stay</button>
                 <button id="reset-btn" onclick="reset()">Reset</button>
             </div>
-
         </div>
+        <script src="functions.js"></script>
     </body>
 </html>
